--- a/src/services/NSE.Identidade.API/appsettings.Development.json
+++ b/src/services/NSE.Identidade.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=NerdStoreEnterprise;Trusted_Connection=True;persist security info=True;MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
